# irsl_www

./: CMakeLists.txt  LICENSE  README.md  package.xml
docker/: Dockerfile.add_files  Dockerfile.apache_rosbridge  README.md  all-compose-linux-ssl.yaml  all-compose-win-ssl.yaml  build.sh  build_integration.sh  build_win.sh  byobu.sh  docker-compose-linux-ssl.yaml  docker-compose-linux.yaml  docker-compose-win-ssl.yaml  docker-compose-win.yaml  run00_apache.sh  run01_rosbridge.sh  run02_video_server.sh  run_docker.sh  www-compose-linux-ssl.yaml  www-compose-linux.yaml  www-compose-win-ssl.yaml  www-compose-win.yaml
docker/sites-available/: 000-default.conf  default-ssl.conf
docker/userdir/: run_apache.sh  run_rosbridge.sh  run_rosbridge_ssl.sh  run_video_server.sh  server.crt  server.csr  server.key  video_server.launch
html/audio/: audio-recorder.js  audio_wav.html  encode-wav.js  main-audio.js
html/base_arm/: img.js  img_joy.html  img_joy.js  virtual_joy.html
html/camera_web/: camera.html  capture.js  main.css  memo.txt  test.html
html/ros/: rosmain.js
html/rostest/: rosjoy.html  rosjoy.js  rostest.html  rostest.js  rostest_pub.html  rostestpub.js
html/touch/: touch.css  touch.html  touch.js
launch/: run_base.launch  run_docker.launch
script/: ERROR_FIX_LOG.md  ERROR_LOG.md  FINAL_REPORT.md  FINAL_REPORT_APPENDIX.md  IMPLEMENTATION_SUMMARY.md  PROMPT_IMPROVEMENT.md  README.md  VLM_INTEGRATION.md  VLM_SETUP_GUIDE.md  arm_splitter_node.py  arm_splitter_node.py.save  cog_speech.py  gemini_api.py  joy_to_cmdvel.py  make_plan_sample.py  run_audio.sh  sub_audio.py  sub_writing.py  sub_writing1.py  test_vlm_integration.py  text_to_speech.py
sketch_result/: writing_19_top5.json  writing_20_top5.json  writing_21_top5.json  writing_22_top5.json
